--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.home.map.HomeMapActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.home.detail.HomeDetailActivity"
             android:exported="false" />
         <activity
